tests/fail/differents_types_array_assign.tig
let
    type arrayint = array of int
    type arrayinteger = array of int
    type jaggedint = array of arrayint
    var arrayint1 := arrayint[5+7] of 1 + (3/2) - (5*7)
    var N := 6
    var jaggedint1 := jaggedint[N] of arrayint1
in
    jaggedint1[1] := arrayinteger[2] of 0
end
